Agregue el front y modificar el back

--- a/fullStackJS/backend/.env
+++ b/fullStackJS/backend/.env
@@ -1,2 +1,7 @@
 MONGO_URI=mongodb+srv://juanma:SkByfm7NZ2KRg0fm@cluster0.ntl0u.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 JWT_SECRET=jmbr
+EMAIL_USER= 94bde2e1571e89
+EMAIL_PASS= b437bc3f66c3b0
+EMAIL_HOST= smtp.mailtrap.io
+EMAIL_PORT= 2525
+FRONT_URL =http://localhost:3000
